# quantum-solver

./: .bashrcsource.swp  .gitignore  LICENSE  README.md  doxygen_config.txt  pyproject.toml  setup.cfg  tmp.py
docs/: SOURCES_8txt.html  ____init_____8py_source.html  algorithms_2____init_____8py_source.html  annotated.html  annotated_dup.js  bb84_2____init_____8py_source.html  bb84_2____main_____8py.html  bb84_2____main_____8py.js  bb84_2____main_____8py_source.html  bb84_8py.html  bb84_8py_source.html  bb84__algorithm_8py.html  bb84__algorithm_8py_source.html  bernstein__vazirani_8py.html  bernstein__vazirani_8py_source.html  classsrc_1_1algorithms_1_1bernstein__vazirani_1_1BernsteinVazirani-members.html  classsrc_1_1algorithms_1_1bernstein__vazirani_1_1BernsteinVazirani.html  classsrc_1_1algorithms_1_1bernstein__vazirani_1_1BernsteinVazirani__coll__graph.map  classsrc_1_1algorithms_1_1deutsch__jozsa_1_1DeutschJozsa-members.html  classsrc_1_1algorithms_1_1deutsch__jozsa_1_1DeutschJozsa__coll__graph.md5  classsrc_1_1algorithms_1_1deutsch__jozsa_1_1DeutschJozsa__inherit__graph.map  classsrc_1_1algorithms_1_1grover_1_1Grover-members.html  classsrc_1_1algorithms_1_1grover_1_1Grover.html  classsrc_1_1algorithms_1_1qalgorithm_1_1QAlgorithm-members.html  classsrc_1_1algorithms_1_1qalgorithm_1_1QAlgorithm.js  classsrc_1_1algorithms_1_1qalgorithm_1_1QAlgorithm__coll__graph.md5  classsrc_1_1algorithms_1_1qalgorithm_1_1QAlgorithm__inherit__graph.md5  classsrc_1_1algorithms_1_1qalgorithm__manager_1_1QAlgorithmManager-members.html  classsrc_1_1algorithms_1_1qrand_1_1QRand.js  (+109 more)
(+561 files in other folders)
