[metadata]
name = quantum-solver
version = 0.0.1
author = J. Daniel Escánez
author_email = alu0101238944@example.com
description = A little quantum toolset developed using Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alu0101238944/quantum-solver
project_urls =
  Bug Tracker = https://github.com/alu0101238944/quantum-solver/issues
classifiers =
  License :: OSI Approved :: MIT License

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src