[metadata]
name = quantum-solver
version = 1.0.0
author = Daniel Escanez-Exposito
author_email = alu0101238944@ull.edu.es
description = A quantum toolset developed using Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alu0101238944/quantum-solver
project_urls =
  Bug Tracker = https://github.com/alu0101238944/quantum-solver/issues
classifiers =
  License :: OSI Approved :: MIT License

[options]
package_dir =
  = src
packages = find:
python_requires= >=3.8.12
install_requires =
  numpy>=1.19.5
  matplotlib==3.4.2
  qiskit==0.34.1
  pwinput==1.0.2
  halo==0.0.31
  alive-progress==2.3.1
  ascii_graph==1.5.1
  werkzeug>=0.11.15
  oauthlib>=3.0.0
  pytz>=2017.3
  flask
  flask-cors
  APScheduler
  pylatexenc

[options.packages.find]
where = src
